# finance-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0002_add_income_account_id.py  0003_seed_categories.py  0004_add_destination_account_id.py  0005_add_is_income_to_purchases.py  0006_add_credit_payment_fields.py  613e4ea718a0_initial_schema.py
src/bot/: config.py  main.py
src/bot/cogs/: purchases.py  setup.py  tasks.py
src/bot/database/: models.py  session.py
