[project]
name = "finance-bot"
version = "0.1.0"
description = "Discord purchase tracking bot"
requires-python = ">=3.11"

dependencies = [
    "discord.py>=2.3.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "anthropic>=0.25",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
